--- a/hardcaml.opam
+++ b/hardcaml.opam
@@ -1,27 +1,25 @@
-opam-version: "1.2"
+opam-version: "2.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/hardcaml"
 bug-reports: "https://github.com/janestreet/hardcaml/issues"
 dev-repo: "git+https://github.com/janestreet/hardcaml.git"
+doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/index.html"
 license: "MIT"
 build: [
-  ["jbuilder" "build" "-p" name "-j" jobs]
+  ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
+  "ocaml" {>= "4.07.0"}
   "base"
   "ppx_jane"
   "stdio"
   "topological_sort"
-  "jbuilder"                {build & >= "1.0+beta18.1"}
-  "ocaml-migrate-parsetree" {>= "1.0"}
-  "ppxlib"                  {>= "0.1.0"}
-  "zarith"                  {>= "1.4"}
+  "dune"             {build & >= "1.5.1"}
+  "zarith"           {>= "1.5"}
 ]
-available: [ ocaml-version >= "4.06.1" ]
-descr: "
-RTL Hardware Design in OCaml.
-
+synopsis: "RTL Hardware Design in OCaml"
+description: "
 Hardcaml is an embedded DSL for designing and simulating hardware in OCaml.
 Generic hardware designs are easily expressed using features such as higher
 order functions, lists, maps etc.  A built in simulator allows designs to
