--- a/hardcaml.opam
+++ b/hardcaml.opam
@@ -15,7 +15,7 @@ depends: [
   "ppx_jane"
   "stdio"
   "topological_sort"
-  "dune"             {build & >= "1.5.1"}
+  "dune"             {>= "1.5.1"}
   "zarith"           {>= "1.5"}
 ]
 synopsis: "RTL Hardware Design in OCaml"
