--- a/hardcaml.opam
+++ b/hardcaml.opam
@@ -13,9 +13,11 @@ depends: [
   "ocaml" {>= "4.07.0"}
   "base"
   "ppx_jane"
+  "ppx_sexp_conv"
   "stdio"
   "topological_sort"
   "dune"             {>= "2.0.0"}
+  "ppxlib"           {>= "0.11.0"}
   "zarith"           {>= "1.5"}
 ]
 synopsis: "RTL Hardware Design in OCaml"
