--- a/src/dune
+++ b/src/dune
@@ -1,3 +1,3 @@
 (library (name hardcaml) (public_name hardcaml) (c_names bits_stubs)
  (libraries base bigarray dynlink stdio topological_sort unix zarith)
- (preprocess (pps ppx_jane)))
+ (preprocess (pps ppx_jane ppx_deriving_hardcaml0)))
