--- a/hardcaml.opam
+++ b/hardcaml.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.14.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/hardcaml"
@@ -10,12 +11,12 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "ocaml" {>= "4.07.0"}
-  "base"
-  "ppx_jane"
-  "ppx_sexp_conv"
-  "stdio"
-  "topological_sort"
+  "ocaml"            {>= "4.07.0"}
+  "base"             {>= "v0.14" & < "v0.15"}
+  "ppx_jane"         {>= "v0.14" & < "v0.15"}
+  "ppx_sexp_conv"    {>= "v0.14" & < "v0.15"}
+  "stdio"            {>= "v0.14" & < "v0.15"}
+  "topological_sort" {>= "v0.14" & < "v0.15"}
   "dune"             {>= "2.0.0"}
   "ppxlib"           {>= "0.11.0"}
   "zarith"           {>= "1.5"}
