--- a/hardcaml.opam
+++ b/hardcaml.opam
@@ -17,7 +17,7 @@ depends: [
   "stdio"
   "topological_sort"
   "dune"             {>= "2.0.0"}
-  "ppxlib"           {>= "0.11.0"}
+  "ppxlib"           {>= "0.11.0" & < "0.14.0"}
   "zarith"           {>= "1.5"}
 ]
 synopsis: "RTL Hardware Design in OCaml"
