--- a/src/dune
+++ b/src/dune
@@ -1,3 +1,4 @@
 (library (name hardcaml) (public_name hardcaml) (c_names bits_stubs)
- (libraries base bigarray dynlink stdio topological_sort unix zarith)
+ (libraries base bin_prot bigarray dynlink stdio topological_sort unix
+  zarith)
  (preprocess (pps ppx_jane ppx_deriving_hardcaml0)))
