--- a/synthesis_reports/dune
+++ b/synthesis_reports/dune
@@ -1,3 +1,3 @@
 (executables (names synthesis_reports)
- (libraries hardcaml hardcaml_synthesis_reports)
+ (libraries hardcaml hardcaml_xilinx_reports)
  (preprocess (pps ppx_jane ppx_deriving_hardcaml)))
