--- a/hardcaml.opam
+++ b/hardcaml.opam
@@ -10,7 +10,7 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "ocaml" {>= "4.07.0"}
+  "ocaml" {>= "4.08.0"}
   "base"
   "bin_prot"
   "ppx_jane"
@@ -18,7 +18,7 @@ depends: [
   "stdio"
   "topological_sort"
   "dune"             {>= "2.0.0"}
-  "ppxlib"           {>= "0.15.0"}
+  "ppxlib"           {>= "0.15.0" & < "0.18.0"}
   "zarith"           {>= "1.5"}
 ]
 synopsis: "RTL Hardware Design in OCaml"
