--- a/test/regression/dune
+++ b/test/regression/dune
@@ -1,3 +1,3 @@
 (executables (names test_comb_bits_primitives)
- (libraries base core.command_unix core_kernel.core hardcaml_test stdio)
+ (libraries base core_unix.command_unix core hardcaml_test stdio)
  (preprocess (pps ppx_jane)))
