--- a/hardcaml.opam
+++ b/hardcaml.opam
@@ -18,7 +18,7 @@ depends: [
   "stdio"
   "topological_sort"
   "dune"             {>= "2.0.0"}
-  "ppxlib"           {>= "0.23.0"}
+  "ppxlib"           {>= "0.26.0"}
   "zarith"           {>= "1.11"}
 ]
 synopsis: "RTL Hardware Design in OCaml"
@@ -29,3 +29,4 @@ order functions, lists, maps etc.  A built in simulator allows designs to
 be simulated within Hardcaml.  Designs are converted to either Verilog or
 VHDL to interact with standard back end tooling.
 "
+available: arch != "arm32" & arch != "x86_32"
