--- a/hardcaml.opam
+++ b/hardcaml.opam
@@ -13,12 +13,13 @@ depends: [
   "ocaml" {>= "4.11.0"}
   "base"
   "bin_prot"
+  "core_kernel"
   "ppx_jane"
   "ppx_sexp_conv"
   "stdio"
   "topological_sort"
   "dune"             {>= "2.0.0"}
-  "ppxlib"           {>= "0.26.0"}
+  "ppxlib"           {>= "0.28.0"}
   "zarith"           {>= "1.11"}
 ]
 synopsis: "RTL Hardware Design in OCaml"
