--- a/test/bin/dune
+++ b/test/bin/dune
@@ -1,8 +1,16 @@
-(executables (names test_parameters test_multiport_memory)
- (libraries base hardcaml hardcaml_test stdio) (preprocess (pps ppx_jane)))
+(executables
+ (modes byte exe)
+ (names test_parameters test_multiport_memory)
+ (libraries base hardcaml hardcaml_test stdio)
+ (preprocess
+  (pps ppx_jane)))
 
-(rule (targets test_instantiate_verilog.v test_instantiate_vhdl.vhd)
- (deps test_parameters.exe) (action (bash ./test_parameters.exe)))
+(rule
+ (targets test_instantiate_verilog.v test_instantiate_vhdl.vhd)
+ (deps test_parameters.exe)
+ (action
+  (bash ./test_parameters.exe)))
 
-(alias (name runtest)
+(alias
+ (name runtest)
  (deps test_instantiate_verilog.v test_instantiate_vhdl.vhd))
