--- a/src/dune
+++ b/src/dune
@@ -1,7 +1,7 @@
 (library (name hardcaml) (public_name hardcaml) (c_names bits_stubs)
  (libraries base bin_prot bigarray core_kernel.flags stdio topological_sort
   zarith)
- (preprocess (pps ppx_jane ppx_deriving_hardcaml0))
+ (preprocess (pps ppx_jane ppx_hardcaml0))
  (ocamlopt_flags :standard (:include ocamlopt-flags)))
 
 (rule (targets ocamlopt-flags) (deps)
