--- a/test/lib/dune
+++ b/test/lib/dune
@@ -1,4 +1,4 @@
 (library (name hardcaml_test)
  (libraries core expect_test_helpers_core.expect_test_helpers_base hardcaml
   hardcaml_waveterm.kernel)
- (preprocess (pps ppx_deriving_hardcaml ppx_jane)))
+ (preprocess (pps ppx_hardcaml ppx_jane)))
