--- a/test/native/dune
+++ b/test/native/dune
@@ -1,3 +1,3 @@
 (library (name hardcaml_native_test)
  (libraries core expect_test_helpers_async hardcaml hardcaml_test)
- (preprocess (pps ppx_deriving_hardcaml ppx_jane)))
+ (preprocess (pps ppx_hardcaml ppx_jane)))
