--- a/test/bin/dune
+++ b/test/bin/dune
@@ -1,5 +1,6 @@
-(executables (names test_parameters test_multiport_memory)
- (libraries base hardcaml hardcaml_test stdio) (preprocess (pps ppx_jane)))
+(executables (names test_parameters test_multiport_memory auto_naming)
+ (libraries base hardcaml hardcaml_test hardcaml_waveterm.interactive stdio)
+ (preprocess (pps ppx_jane)))
 
 (rule (targets test_instantiate_verilog.v test_instantiate_vhdl.vhd)
  (deps test_parameters.exe) (action (bash ./test_parameters.exe)))
