--- a/test/rtl_gen/dune
+++ b/test/rtl_gen/dune
@@ -1,6 +1,6 @@
 (library (name hardcaml_rtl_test)
- (libraries core core_unix hardcaml expect_test_helpers_core
-  patdiff.expect_test_patdiff core_unix.filename_unix)
+ (libraries core core_unix hardcaml patdiff.expect_test_patdiff
+  core_unix.filename_unix)
  (preprocess (pps ppx_jane ppx_hardcaml)))
 
 (rule (targets setup.ml) (deps)
