--- a/test/lib/dune
+++ b/test/lib/dune
@@ -1,6 +1,6 @@
 (library
  (name hardcaml_test)
  (libraries core expect_test_helpers_core.expect_test_helpers_base hardcaml
-   hardcaml_waveterm.kernel)
+   hardcaml_waveterm.cyclesim)
  (preprocess
   (pps ppx_hardcaml ppx_jane)))
