--- a/hardcaml.opam
+++ b/hardcaml.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.17.0"
 maintainer: "Jane Street developers"
 authors: ["Jane Street Group, LLC"]
 homepage: "https://github.com/janestreet/hardcaml"
@@ -10,13 +11,13 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "ocaml" {>= "5.1.0"}
-  "base"
-  "bin_prot"
-  "core_kernel"
-  "ppx_jane"
-  "ppx_sexp_conv"
-  "stdio"
+  "ocaml"         {>= "5.1.0"}
+  "base"          {>= "v0.17" & < "v0.18"}
+  "bin_prot"      {>= "v0.17" & < "v0.18"}
+  "core_kernel"   {>= "v0.17" & < "v0.18"}
+  "ppx_jane"      {>= "v0.17" & < "v0.18"}
+  "ppx_sexp_conv" {>= "v0.17" & < "v0.18"}
+  "stdio"         {>= "v0.17" & < "v0.18"}
   "dune"          {>= "3.11.0"}
   "ppxlib"        {>= "0.28.0"}
   "zarith"        {>= "1.11"}
