--- a/src/dune
+++ b/src/dune
@@ -5,7 +5,7 @@
  (name hardcaml)
  (public_name hardcaml)
  (libraries base bin_prot core core_kernel.flags base.md5 sexplib stdio
-   zarith)
+   splittable_random zarith)
  (preprocess
   (pps ppx_jane ppx_hardcaml0))
  (ocamlopt_flags
