--- a/hardcaml.opam
+++ b/hardcaml.opam
@@ -18,10 +18,11 @@ depends: [
   "ppx_jane"
   "ppx_sexp_conv"
   "sexplib"
+  "splittable_random"
   "stdio"
-  "dune"          {>= "3.11.0"}
-  "ppxlib"        {>= "0.28.0"}
-  "zarith"        {>= "1.11"}
+  "dune"              {>= "3.11.0"}
+  "ppxlib"            {>= "0.33.0"}
+  "zarith"            {>= "1.11"}
 ]
 available: arch != "arm32" & arch != "x86_32"
 synopsis: "RTL Hardware Design in OCaml"
