--- a/test/bin/dune
+++ b/test/bin/dune
@@ -1,6 +1,7 @@
 (executables
  (modes byte exe)
- (names test_parameters test_multiport_memory auto_naming test_rom)
+ (names test_parameters test_multiport_memory auto_naming test_rom
+   test_statemachines)
  (libraries core core_unix.command_unix hardcaml hardcaml_test
    hardcaml_waveterm.interactive stdio)
  (preprocess
