--- a/hardcaml.opam
+++ b/hardcaml.opam
@@ -23,7 +23,7 @@ depends: [
   "splittable_random"
   "stdio"
   "dune"              {>= "3.17.0"}
-  "ppxlib"            {>= "0.33.0"}
+  "ppxlib"            {>= "0.33.0" & < "0.36.0"}
 ]
 available: arch != "arm32" & arch != "x86_32"
 synopsis: "RTL Hardware Design in OCaml"
