--- a/hardcaml.opam
+++ b/hardcaml.opam
@@ -24,7 +24,7 @@ depends: [
   "splittable_random"
   "stdio"
   "dune"              {>= "3.17.0"}
-  "ppxlib"            {= "0.33.0+jst"}
+  "ppxlib"            {= "0.33.0+ox"}
 ]
 available: arch != "arm32" & arch != "x86_32"
 synopsis: "RTL Hardware Design in OCaml"
