--- a/test/bin/dune
+++ b/test/bin/dune
@@ -2,7 +2,7 @@
  (modes byte exe)
  (names test_parameters test_multiport_memory auto_naming test_rom
    test_statemachines)
- (libraries core core_unix.command_unix hardcaml hardcaml_test
+ (libraries core_unix.command_unix core hardcaml hardcaml_test
    hardcaml_waveterm.interactive jane_rope stdio)
  (preprocess
   (pps ppx_jane)))
